Product Menu: Flex layout (#1888)